<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/editor_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryLeftPanel"
            android:layout_width="@dimen/width_left_panel"
            android:layout_height="wrap_content"
            android:text="@string/overview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/editor_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_type"
                android:inputType="textCapWords" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryLeftPanel"
            android:layout_width="@dimen/width_left_panel"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/editor_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_price"
            android:inputType="numberDecimal"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryLeftPanel"
                android:layout_width="@dimen/width_left_panel"
                android:layout_height="@dimen/height_price"
                android:text="@string/quantity" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_let_order_button"
                android:text="@string/order_new" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editor_quantity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_price"
                android:gravity="center_vertical"
                android:hint="@string/edit_text_quantity"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_minus" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_plus" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_price"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryLeftPanel"
            android:layout_width="@dimen/width_left_panel"
            android:layout_height="wrap_content"
            android:text="@string/sold" />

        <TextView
            android:id="@+id/editor_sold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="@dimen/price_text_size"
            android:textStyle="bold"
            tools:text="16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryLeftPanel"
            android:layout_width="@dimen/width_left_panel"
            android:layout_height="wrap_content"
            android:text="@string/supplier" />

        <EditText
            android:id="@+id/editor_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_phone_number"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="this is here just to move the picture as down as possible" />

    <ImageView
        android:id="@+id/editor_image"
        android:layout_width="@dimen/img_size"
        android:layout_height="@dimen/img_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        tools:src="@mipmap/ic_launcher"
        android:contentDescription="@string/image_cont_desc"/>

</LinearLayout>